# airflow-dbt-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  autodoc.html  development.html  example_dags.html  genindex.html  getting_started.html  how_does_it_work.html  index.html  index.rst  introduction.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  docs_pages.yaml  pypi_deploy.yaml  tagged_release.yml  test.yaml  workflow.yaml
_build/: .buildinfo  genindex.html  index.html  py-modindex.html
_build/.doctrees/: autodoc.doctree  environment.pickle  index.doctree
_modules/: index.html
_modules/airflow_dbt_python/hooks/: backends.html  dbt.html  localfs.html  remote.html  s3.html
_modules/airflow_dbt_python/hooks/backends/: localfs.html  s3.html
_modules/airflow_dbt_python/operators/: dbt.html
_sources/: autodoc.rst.txt  development.rst.txt  example_dags.rst.txt  getting_started.rst.txt  how_does_it_work.rst.txt  index.rst.txt  introduction.rst.txt
_sources/reference/: backends.rst.txt  hooks.rst.txt
_static/: documentation_options.js
airflow_dbt_python/: __init__.py  __version__.py
airflow_dbt_python/hooks/: __init__.py  backend.py  base.py  dbt.py  dbt_s3.py  git.py  github.py  localfs.py  remote.py  s3.py  target.py
airflow_dbt_python/hooks/backends/: __init__.py  base.py  localfs.py  s3.py
airflow_dbt_python/hooks/fs/: __init__.py  gcs.py  git.py  local.py  s3.py
airflow_dbt_python/hooks/remote/: __init__.py  gcs.py  git.py  localfs.py  s3.py
airflow_dbt_python/operators/: __init__.py  dbt.py
airflow_dbt_python/utils/: __init__.py  configs.py  enums.py  env.py  url.py  version.py
data/: a_seed.csv
docs/: conf.py  development.rst  example_dags.rst  getting_started.rst  how_does_it_work.dot  how_does_it_work.rst  introduction.rst  reference.rst  requirements.txt
docs/reference/: hooks.rst  operators.rst  utils.rst
examples/: __init__.py  airflow_connection_target_dag.py  basic_dag.py  complete_dbt_workflow_dag.py  dbt_project_in_github_dag.py  dbt_project_in_s3_dag.py  readme_example_dbt_dag.py  use_dbt_artifacts_dag.py
reference/: backends.html  hooks.html  operators.html  utils.html
tests/: conftest.py  test_dbt_base.py  test_dbt_build.py  test_dbt_clean.py  test_dbt_compile.py  test_dbt_debug.py  test_dbt_deps.py  test_dbt_list.py  test_dbt_parse.py  test_dbt_run.py  test_dbt_run_operation.py  test_dbt_s3_hook.py  test_dbt_seed.py  test_dbt_snapshot.py  test_dbt_source.py  test_dbt_test.py  test_operators.py
tests/dags/: test_dbt_dags.py
tests/hooks/: __init__.py  test_gcs_hook.py  test_git_hook.py  test_localfs_hook.py  test_s3_hook.py  test_trino.py
tests/hooks/dbt/: __init__.py  test_dbt_backend.py  test_dbt_build.py  test_dbt_clean.py  test_dbt_compile.py  test_dbt_debug.py  test_dbt_deps.py  test_dbt_generate.py  test_dbt_hook_base.py  test_dbt_hook_configs.py  test_dbt_list.py  test_dbt_localfs_backend.py  test_dbt_parse.py  test_dbt_run.py  test_dbt_run_operation.py  test_dbt_s3_backend.py  test_dbt_seed.py  test_dbt_snapshot.py  test_dbt_source.py  test_dbt_test.py
tests/hooks/dbt/backends/: test_dbt_backend_base.py  test_dbt_localfs_backend.py  test_dbt_s3_backend.py
tests/hooks/s3/: test_dbt_s3_hook.py
tests/operators/: __init__.py  test_dbt_base.py  test_dbt_build.py  test_dbt_clean.py  test_dbt_compile.py  test_dbt_debug.py  test_dbt_deps.py  test_dbt_docs_generate.py  test_dbt_list.py  test_dbt_parse.py  test_dbt_run.py  test_dbt_run_operation.py  test_dbt_seed.py  test_dbt_snapshot.py  test_dbt_source.py  test_dbt_test.py
tests/profiles/: bigquery_sa_file.json  bigquery_sa_file.yml  bigquery_sa_json.json  bigquery_sa_json.yml  postgres.json  postgres.yml  redshift.json  redshift.yml  redshift_iam.json  redshift_iam.yml  snowflake.json  snowflake.yml  snowflake_external_oauth.json  snowflake_external_oauth.yml  snowflake_jwt.json  snowflake_jwt.yml  snowflake_mfa.json  snowflake_mfa.yml  snowflake_oauth.json  snowflake_oauth.yml  snowflake_sso.json  snowflake_sso.yml  spark_http.json  spark_http.yml  spark_odbc.json  spark_odbc.yml  spark_session.json  spark_session.yml  spark_thrift.json  spark_thrift.yml
tests/utils/: __init__.py  test_configs.py  test_enums.py  test_env.py  test_url.py
