[tool.poetry]
name = "airflow-dbt-python"
version = "2.1.0"
description = "A collection of Airflow operators, hooks, and utilities to execute dbt commands"
authors = ["Tomás Farías Santana <tomas@tomasfarias.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomasfarias/airflow-dbt-python"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"  # Airflow providers require this upper boundary

apache-airflow = { version = ">=2.7" }
apache-airflow-providers-amazon = { version = ">=3.0.0", optional = true }
apache-airflow-providers-ssh = { version = ">=3.0.0", optional = true }
connexion = { version = "<3.0" }  # https://github.com/apache/airflow/issues/35217
dulwich = { version = ">=0.21", optional = true }
contextlib-chdir = { version = "==1.0.2", python = "<3.11" }

dbt-core = { version = ">=1.7.5,<1.9.0", optional = true }
dbt-bigquery = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-postgres = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-redshift = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-snowflake = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-spark = { version = ">=1.7.0,<1.9.0", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
apache-airflow-providers-amazon = ">=3.0.0"
apache-airflow-providers-ssh = ">=3.0.0"
black = ">=22"
boto3-stubs = { extras = ["s3"], version = ">=1.26.8" }
coverage = { extras = ["toml"], version = ">=7.2" }
# docutils 0.21 causes an error with poetry (https://github.com/python-poetry/poetry/issues/9293)
docutils = "!=0.21"
dulwich = ">=0.21,!=0.21.6"
moto = ">=4.0.3"
mypy = ">=1"
freezegun = ">=1.1.0"
pre-commit = ">=2.18"
psycopg = ">=3.0"
pytest = ">=7.2"
pytest-postgresql = ">=5"
ruff = ">=0.0.254"
types-freezegun = ">=1.1.6"
types-PyYAML = ">=6.0.7"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = [
    { python = "<3.8", version = "<6.0" },
    { python = ">=3.8,<3.9", version = "<7.2" },
    { python = ">=3.9", version = ">=7.2" },
]
sphinx-rtd-theme = ">=1.1"
sphinx-copybutton = ">=0.5"
attrs = ">=22"

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
dbt-bigquery = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-postgres = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-redshift = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-snowflake = { version = ">=1.7.0,<1.9.0", optional = true }
dbt-spark = { version = ">=1.7.0,<1.9.0", optional = true }

[tool.poetry.extras]
airflow-providers = ["apache-airflow-providers-amazon", "apache-airflow-providers-ssh"]
adapters = ["dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-snowflake", "dbt-spark"]
bigquery = ["dbt-bigquery"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-copybutton"]
git = ["apache-airflow-providers-ssh", "dulwich"]
postgres = ["dbt-postgres"]
redshift = ["dbt-redshift"]
s3 = ["apache-airflow-providers-amazon"]
snowflake = ["dbt-snowflake"]
spark = ["dbt-spark"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["airflow_dbt_python"]

[tool.coverage.paths]
source = [
    "airflow_dbt_python",
    "/home/runner/*/airflow-dbt-python/airflow_dbt_python"
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
postgresql_user = "test"
postgresql_password = "test" # pragma: allowlist secret
postgresql_dbname = "test"
python_classes = "!TestStatus !TestTaskConfig"
filterwarnings = [
    # Warnings raised by dbt dependencies
    'ignore: write_gpickle is deprecated:DeprecationWarning',
    "ignore: 'soft_unicode' has been renamed to 'soft_str':DeprecationWarning"
]
markers = [
    "integration: mark test as an integration test"
]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "airflow",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "webserver_config.py",
]

[tool.ruff.lint]
select = ["E", "D", "F", "I"]
ignore = ["D107"]

[tool.ruff.lint.isort]
known-third-party = [
  "airflow",
  "dbt",
  "yaml",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402",
    "F401",
]
"tests/*" = [
    "F401",
    "E402",
]
"docs/*" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
